feat: add AdminController for user management; implement user retrieval, update, and deletion with role-based access control